# modelplane-fork

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASING.md  SECURITY.md  crossplane-project.yaml  flake.nix  nix.sh  pyproject.toml  upbound.yaml  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  docsearch.yml  pr.yml
apis/: mrap.yaml
apis/aksclusters/: composition.yaml  definition.yaml
apis/clustermodels/: definition.yaml
apis/dynamobackends/: composition.yaml  definition.yaml
apis/dynamostacks/: composition.yaml  definition.yaml
apis/eksclusters/: composition.yaml  definition.yaml
apis/gkeclusters/: composition.yaml  definition.yaml
apis/inferenceclasses/: composition.yaml  definition.yaml
apis/inferenceclusters/: composition.yaml  definition.yaml
apis/inferenceenvironments/: definition.yaml
apis/inferencegateways/: definition.yaml
apis/kservebackends/: composition.yaml  definition.yaml
apis/kservestacks/: composition.yaml  definition.yaml
apis/modelcaches/: composition.yaml  definition.yaml
apis/modeldeployments/: definition.yaml
apis/modelendpoints/: composition.yaml  definition.yaml
apis/modelplacements/: definition.yaml
apis/modelreplicas/: composition.yaml  definition.yaml
apis/models/: definition.yaml
apis/modelservices/: composition.yaml  definition.yaml
apis/nebiusclusters/: composition.yaml  definition.yaml
apis/servingstacks/: composition.yaml  definition.yaml
demo/: deploy.sh
demo/platform/: configuration.yaml  prerequisites.yaml  setup.sh  teardown.sh
design/: PRD.md  SPEC.md  api-update.md  design.md  disaggregation.md  eks-efs-modelcache.md  modelcache.md  unopinionated-deployments.md
docs/: concepts.md  getting-started.md  hugo.toml  package-lock.json  postcss.config.js  pull-secret.yaml  vercel-build.sh  vercel.json
docs/api/: mcp.js
docs/content/: _index.md  concepts.md  examples.md  getting-started.md  reference.md
docs/data/: apigroups.yaml  versions.yaml
examples/cache/: kimi-k2.yaml  qwen-cached.yaml
examples/concepts/: inference-class-eks-l4.yaml  inference-class-gke-l4.yaml  model-cache.yaml  model-deployment-multinode.yaml  model-deployment.yaml  model-endpoint.yaml  model-service.yaml
examples/deployment/: model-deployment-autoscaling.yaml  model-deployment-multinode.yaml  model-deployment.yaml
examples/getting-started/: clusterproviderconfig-aws.yaml  clusterproviderconfig-gke.yaml  configuration.yaml
examples/gkecluster/: example.yaml
examples/kimi-k2/: inference-class.yaml  inference-cluster.yaml
examples/kservestack/: example.yaml
examples/platform/: inference-class-eks-l4.yaml  inference-class-gke-l4.yaml  inference-class-h100-byo.yaml  inference-cluster-eks.yaml  inference-cluster-existing.yaml  inference-cluster-gke.yaml  inference-environment-existing.yaml  inference-environment-gke.yaml  inference-gateway.yaml
examples/qwen-demo/: 00-prerequisites.yaml  01-gateway.yaml  02-class.yaml  03-cluster.yaml  04-deployment.yaml
examples/qwen3-8b/: inference-class.yaml  inference-cluster.yaml  model-deployment.yaml  model-service.yaml
examples/qwen3-coder/: inference-class-fp8.yaml  inference-class.yaml  inference-cluster.yaml  model-cache.yaml  model-deployment-fp8.yaml  model-deployment.yaml  model-service-fp8.yaml
functions/compose-aks-cluster/: pyproject.toml
functions/compose-dynamo-backend/: main.py
functions/compose-dynamo-stack/: main.py
functions/compose-eks-cluster/: pyproject.toml
functions/compose-gke-cluster/: main.py  pyproject.toml
functions/compose-gke-cluster/function/: fn.py
functions/compose-gke-cluster/tests/: __init__.py  test_fn.py
functions/compose-inference-class/: main.py  pyproject.toml
functions/compose-inference-class/function/: __version__.py  fn.py
functions/compose-inference-class/tests/: test_fn.py
functions/compose-inference-cluster/: main.py  pyproject.toml
functions/compose-inference-env/: main.py
functions/compose-inference-gateway/: main.py  pyproject.toml
functions/compose-inference-gateway/function/: fn.py  main.py
functions/compose-inference-gateway/tests/: test_fn.py
functions/compose-kserve-backend/: main.py  pyproject.toml
functions/compose-kserve-stack/: inference_extension_crds.json  main.py
functions/compose-model/: main.py
functions/compose-model-cache/: pyproject.toml
functions/compose-model-deployment/: main.py  pyproject.toml  scheduling.py
functions/compose-model-endpoint/: main.py  pyproject.toml
functions/compose-model-placement/: main.py
functions/compose-model-replica/: main.py  pyproject.toml
functions/compose-model-service/: main.py  pyproject.toml
functions/compose-model-service/function/: fn.py
functions/compose-model-service/tests/: test_fn.py
functions/compose-nebius-cluster/: pyproject.toml
functions/compose-serving-stack/: pyproject.toml
functions/compose-serving-stack/function/: __init__.py  fn.py  gaie_crds.yaml
functions/compose-serving-stack/tests/: test_fn.py
functions/compose-usages/: pyproject.toml
lib/: backends.py  conditions.py  defaults.py  helm.py  keda.py  metadata.py  naming.py  prometheus.py  resource.py  secrets.py  serving.py
manifests/qwen-demo/: 00-prerequisites.yaml  05-service.yaml  test.sh
nix/: apps.nix  build.nix  checks.nix  deps.nix  docs.nix  functions.nix
schemas/: .lock.json
schemas/python/: pyproject.toml
skills/crossplane-python-functions/: SKILL.md
tests/test-backend/: main.py
tests/test-backend-second-pass/: main.py
ui/: .golangci.yml  go.mod  go.sum
(+1381 files in other folders)
