[project]
name = "modelplane"
version = "0.0.0"
description = "An open-source AI inference platform built on Crossplane."
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"

[tool.uv]
# This is a workspace root; it's not installable itself.
package = false

[tool.uv.workspace]
members = ["functions/*", "schemas/python"]

[dependency-groups]
dev = [
  "crossplane-function-sdk-python>=0.12.0",
]

[tool.ruff]
target-version = "py312"
# Match ruff format's default. The formatter won't produce lines longer than
# this, but string literals in deeply nested dicts can still exceed it.
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import ordering)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python idioms)
    "A",      # flake8-builtins (shadowing builtins)
    "B",      # flake8-bugbear (common gotchas)
    "PL",     # pylint subset
    "SIM",    # flake8-simplify (simplifiable constructs)
    "RET",    # flake8-return (return statement issues)
    "ARG",    # flake8-unused-arguments
    "C4",     # flake8-comprehensions (idiomatic comprehensions)
    "PTH",    # flake8-use-pathlib (pathlib over os.path)
    "T20",    # flake8-print (no print() in library code)
    "FBT",    # flake8-boolean-trap (no boolean positional args)
    "TID",    # flake8-tidy-imports (no relative imports)
    "BLE",    # flake8-blind-except (no bare except Exception)
    "RUF",    # ruff-specific rules (incl. unused/malformed noqa)
]

[tool.ruff.lint.pylint]
# Builder functions like helm_release use named parameters for clarity.
max-args = 8

[tool.ruff.lint.per-file-ignores]
# Generated models are not under our control.
"schemas/python/**" = ["ALL"]
# Tests use magic values, many parameters, long hardcoded resource dicts, and
# boolean fixture toggles passed positionally.
"**/tests/**" = ["E501", "PLR2004", "PLR0913", "FBT001"]
# fn.py uses gRPC's required PascalCase method name.
"functions/*/function/fn.py" = ["N802"]
# main.py is the click CLI entrypoint: boolean flags are idiomatic, and it
# catches Exception at the top level to report startup failures cleanly.
"functions/*/function/main.py" = ["FBT001", "BLE001"]
