[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[project]
name = "compose-gke-cluster"
version = "0.0.0"
description = "Compose a GKE cluster with networking, node pools, and service accounts."
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
  "crossplane-function-sdk-python>=0.14.0",
  "click>=8.1.0",
  "grpcio>=1.73.1",
  "crossplane-models",
]

[tool.uv.sources]
crossplane-models = { workspace = true }

[project.scripts]
function = "function.main:cli"

[tool.uv.build-backend]
module-name = "function"
module-root = ""
