[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "function"
description = "A Crossplane composition function."
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
  "crossplane-function-sdk-python==0.12.0",
  "click==8.3.2",
  "grpcio>=1.73.1",
  "crossplane-models @ file:./../../schemas/python",
]
dynamic = ["version"]

[project.scripts]
function = "function.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["function"]

[tool.hatch.version]
path = "function/__version__.py"
validate-bump = false

[tool.hatch.metadata]
allow-direct-references = true
