[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compose-model-service"
description = "Compose a Gateway API HTTPRoute from a ModelService."
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
  "crossplane-function-sdk-python>=0.12.0",
  "click>=8.1.0",
  "grpcio>=1.73.1",
  "crossplane-models",
]
dynamic = ["version"]

[tool.uv.sources]
crossplane-models = { workspace = true }

[project.scripts]
function = "function.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["function"]

[tool.hatch.version]
path = "function/__version__.py"
validate-bump = false

